--- a/Style-Sheets/index-styles.css
+++ b/Style-Sheets/index-styles.css
@@ -249,6 +249,7 @@ html, body {
   object-fit: contain;
   padding-top: 0px;
   justify-content: flex-start;
+  cursor: pointer;
 }
 
 
@@ -440,13 +441,13 @@ html, body {
   align-items: center;
   justify-content: center;
   
- 
 }
 
 
 .programs-section h1 {
   font-family: 'open sans', sans-serif;
   font-weight: 900;
+  text-align: center;
 }
 
 .programs-section p {
@@ -479,7 +480,7 @@ html, body {
   width: 200px;
   text-align: center;
   font-family: 'open sans', sans-serif;
-  margin-left: 10px;
+  
   position: relative;
   overflow: hidden;
   height: 260px;
